# c2usb-mcux-examples

./: .gitignore  README.md  projects.code-workspace  west.yml
.github/workflows/: arm-gcc.yml
common/: CMakePresets.json  demo_keyboard.hpp  mcux_include.json
hid-keyboard/: .vscode  CMakeLists.txt  main.cpp
hid-mouse/: CMakeLists.txt  main.cpp  mcux_include.json
patches/mcu-sdk-examples/: 0001-ignore-MCUXpresso-for-VS-Code-extension-created-file.patch
patches/usb/: 0001-use-SDK-delay-for-wakeup.patch
